Change z-index of page-issues read-more link
Changes z-index from 1 to 0 on page-issues link to avoid showing
white background when navigation menu slides over.

Also changing z-index value on SpecialNotificationsOverlay.less
from the hard-coded value of 2 to @z-indexOverOverlay
(which is set to 2).

Bug: T214550

--- a/skinStyles/ext.echo.styles.special/SpecialNotificationsOverlay.less
+++ b/skinStyles/ext.echo.styles.special/SpecialNotificationsOverlay.less
@@ -29,7 +29,7 @@
 
 			&-affixed {
 				position: fixed;
-				z-index: 2;
+				z-index: @z-indexOverOverlay;
 				top: 0;
 				background-color: @skinContentBgColor;
 				padding-top: 0.5em;
